first update of fork

--- a/Week2/assignment/types.ipynb
+++ b/Week2/assignment/types.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true,
     "nbgrader": {
@@ -52,8 +52,8 @@
    },
    "outputs": [],
    "source": [
-    "NAME = 'WRITE YOUR NAME HERE'\n",
-    "NETID = 'WRITE YOUR NETID HERE'"
+    "NAME = 'Daniel Moser'\n",
+    "NETID = 'dmoser2'"
    ]
   },
   {
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true,
     "deletable": false,
@@ -88,7 +88,7 @@
    },
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE"
+    "an_integer = 490"
    ]
   },
   {
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "deletable": false,
@@ -144,9 +144,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "deletable": false,
     "nbgrader": {
      "checksum": "d7e04110e885de1e17d1503c01faab9a",
@@ -158,12 +158,12 @@
    },
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE"
+    "a_floating_point = 3.14159"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "deletable": false,
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "deletable": false,
@@ -214,12 +214,12 @@
    },
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE"
+    "a_string = 'informatics'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true,
     "deletable": false,
