--- a/Week3/assignment/decision_tree.ipynb
+++ b/Week3/assignment/decision_tree.ipynb
@@ -29,8 +29,8 @@
    },
    "outputs": [],
    "source": [
-    "NAME = 'WRITE YOUR NAME HERE'\n",
-    "NETID = 'WRITE YOUR NETID HERE'"
+    "NAME = 'Daniel Moser'\n",
+    "NETID = 'dmoser2'"
    ]
   },
   {
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "nbgrader": {
@@ -152,7 +152,7 @@
        "<IPython.core.display.SVG object>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false,
     "deletable": false,
@@ -202,12 +202,23 @@
    "source": [
     "def is_male(sex):\n",
     "    \n",
-    "    # YOUR CODE HERE"
+    "    # check string input\n",
+    "    if not isinstance(sex, str):\n",
+    "        print('Input must be string \"male\" or \"female\".')\n",
+    "        return  \n",
+    "\n",
+    "    if sex == \"male\":\n",
+    "        return True\n",
+    "    elif sex == \"female\":\n",
+    "        return False\n",
+    "    else:\n",
+    "        return print('Input must be string \"male\" or \"female\".')\n",
+    "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false,
     "deletable": false,
@@ -247,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {
     "collapsed": true,
     "deletable": false,
@@ -263,12 +274,21 @@
    "source": [
     "def is_old(age):\n",
     "    \n",
-    "    # YOUR CODE HERE"
+    "    # check integer input\n",
+    "    if not isinstance(age, int) and age > 1:\n",
+    "        print('Age must be a non-zero, positve integer.')\n",
+    "        return  \n",
+    "    \n",
+    "    if age > 9.5:\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False\n",
+    "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false,
     "deletable": false,
@@ -310,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {
     "collapsed": true,
     "deletable": false,
@@ -326,12 +346,15 @@
    "source": [
     "def has_many_sibsp(sibsp):\n",
     "    \n",
-    "    # YOUR CODE HERE"
+    "    if sibsp >  2.5:\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {
     "collapsed": false,
     "deletable": false,
@@ -374,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 34,
    "metadata": {
     "collapsed": false,
     "deletable": false,
@@ -472,7 +495,7 @@
        "<IPython.core.display.SVG object>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -484,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {
     "collapsed": true,
     "deletable": false,
@@ -500,12 +523,37 @@
    "source": [
     "def survived_titanic(sex, age, sibsp):\n",
     "    \n",
-    "    # YOUR CODE HERE"
+    "    '''\n",
+    "    Decides whether a person survives the Titanic sinking.\n",
+    "    \n",
+    "    Parameters\n",
+    "    __________\n",
+    "    \n",
+    "    sex: string 'male' or 'female'\n",
+    "    age: a non-zero, positve integer\n",
+    "    sibsp: the number of siblings or spouses aboard\n",
+    "    \n",
+    "    Returns\n",
+    "    _______\n",
+    "    output: Person survives sinking - True or False\n",
+    "    '''    \n",
+    "    \n",
+    "    if is_male(sex):\n",
+    "        if is_old(age):\n",
+    "            return False\n",
+    "        else:\n",
+    "            if has_many_sibsp(sibsp):\n",
+    "                return False\n",
+    "            else:\n",
+    "                return True\n",
+    "    else:\n",
+    "        return True\n",
+    "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {
     "collapsed": false,
     "deletable": false,
@@ -529,6 +577,15 @@
     "assert_equal(survived_titanic('female', 10, 3), True)\n",
     "assert_equal(survived_titanic('female', 9, 3), True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
