--- a/Week4/assignment/stats.ipynb
+++ b/Week4/assignment/stats.ipynb
@@ -23,14 +23,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "NAME = 'WRITE YOUR NAME HERE'\n",
-    "NETID = 'WRITE YOUR NETID HERE'"
+    "NAME = 'Daniel Moser'\n",
+    "NETID = 'dmoser2'"
    ]
   },
   {
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true,
     "deletable": false,
@@ -89,14 +89,28 @@
     "    minimum: An integer. The minimum of input_list.\n",
     "    '''\n",
     "    \n",
-    "    # YOUR CODE HERE\n",
+    "    # assume we are not using built-in min() Python function for the sake of the exercise\n",
+    "    # else minimum = min(input_list) would be sufficient\n",
     "    \n",
-    "    return minimum"
+    "    # check the list to ensure only integer input\n",
+    "    for i in input_list:\n",
+    "        if not isinstance(i, int):\n",
+    "            print(\"Elements in list are not all integers. Aborting...\")\n",
+    "            return\n",
+    "        \n",
+    "    # after successful check, sort list from lowest to greatest\n",
+    "    # use sorted() function to ensure the input_list is not modified and that new list is created\n",
+    "    temp_list = sorted(input_list)\n",
+    "\n",
+    "    # first element of sorted list is now minimum\n",
+    "    minimum = temp_list[0]\n",
+    "    \n",
+    "    return minimum\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false,
     "deletable": false,
@@ -140,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true,
     "deletable": false,
@@ -167,14 +181,50 @@
     "    maximum: An integer. The maximum of input_list.\n",
     "    '''\n",
     "    \n",
-    "    # YOUR CODE HERE\n",
+    "    # assume we are not using built-in max() Python function for the sake of the exercise\n",
+    "    # else maximum = max(input_list) would be sufficient\n",
     "    \n",
-    "    return maximum"
+    "    # check the list to ensure only integer input\n",
+    "    for i in input_list:\n",
+    "        if not isinstance(i, int):\n",
+    "            print(\"Elements in list are not all integers. Aborting...\")\n",
+    "            return\n",
+    "        \n",
+    "    # after successful check, sort list from lowest to greatest\n",
+    "    # use sorted() function to ensure the input_list is not modified and that new list is created\n",
+    "    temp_list = sorted(input_list)\n",
+    "\n",
+    "    # last element of sorted list is now maximum\n",
+    "    maximum = temp_list[-1]\n",
+    "\n",
+    "    return maximum\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n",
+      "[6, 5, 4, 3, 2, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "input_list  = [6,5,4,3,2,1]\n",
+    "print(get_maximum(input_list))\n",
+    "print(input_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {
     "collapsed": false,
     "deletable": false,
@@ -216,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true,
     "deletable": false,
@@ -244,14 +294,26 @@
     "    mean: A float. The mean of input_list.\n",
     "    '''\n",
     "    \n",
-    "    # YOUR CODE HERE\n",
+    "    # assume we are not using NumPy to do this for us ;)\n",
     "    \n",
-    "    return mean"
+    "    # check the list to ensure only integer input\n",
+    "    for i in input_list:\n",
+    "        if not isinstance(i, int):\n",
+    "            print(\"Elements in list are not all integers. Aborting...\")\n",
+    "            return\n",
+    "        \n",
+    "    # mean = (sum of elements)/(number of elements)\n",
+    "    num = sum(input_list)   #use sum() function to sum all elements for numerator\n",
+    "    den = len(input_list)   #use len() function to count all elements for denominator\n",
+    "    \n",
+    "    mean = float(num/den)   #ensure float result\n",
+    "    \n",
+    "    return mean\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false,
     "deletable": false,
@@ -298,9 +360,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "deletable": false,
     "nbgrader": {
      "checksum": "52d2a145edfaeb165e5833850a78743e",
@@ -330,14 +392,40 @@
     "\n",
     "    '''\n",
     "    \n",
-    "    # YOUR CODE HERE\n",
+    "    # check the list to ensure only integer input\n",
+    "    for i in input_list:\n",
+    "        if not isinstance(i, int):\n",
+    "            print(\"Elements in list are not all integers. Aborting...\")\n",
+    "            return\n",
+    "        \n",
+    "    # sort list and store length of list\n",
+    "    temp_list = sorted(input_list)\n",
+    "    size = len(temp_list)\n",
     "    \n",
-    "    return median"
+    "    # determine whether length of list is even or odd\n",
+    "    # if even number of elements, then True, else False \n",
+    "    if ( size % 2 ) == 0:     \n",
+    "        even = True\n",
+    "    else:\n",
+    "        even = False\n",
+    "        \n",
+    "    # compute median based on whether list is even or odd\n",
+    "        \n",
+    "    if even == True: # even case -- requires mean of two middle elements\n",
+    "        mid1 = temp_list[int(size/2 - 1)]  # 1st middle element\n",
+    "        mid2 = temp_list[int(-size/2)]     # 2nd middle element\n",
+    "        mid_list = [int(mid1),int(mid2)]   # integer list of two middle elements\n",
+    "        median = get_mean(mid_list)        # returns mean of two middle elements as mean -- as float       \n",
+    "            \n",
+    "    if even == False: # odd case -- only one middle element\n",
+    "        median = float(temp_list[int(size/2-0.5)]) # finds middle element as float      \n",
+    "\n",
+    "    return median\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false,
     "deletable": false,
@@ -380,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false,
     "deletable": false,
@@ -414,14 +502,17 @@
     "            In this case, take the median to be the mean of the two middle values.\n",
     "    '''\n",
     "    \n",
-    "    # YOUR CODE HERE\n",
-    "\n",
-    "    return a_tuple"
+    "    # will demonstrate use of all previously defined functions\n",
+    "    \n",
+    "    # a_tuple is a tuple containing return values of all defined functions called on input_list\n",
+    "    a_tuple = ( get_minimum(input_list), get_maximum(input_list), get_mean(input_list), get_median(input_list) )\n",
+    "    \n",
+    "    return a_tuple\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false,
     "deletable": false,
