--- a/Week5/assignment/fileio.ipynb
+++ b/Week5/assignment/fileio.ipynb
@@ -23,14 +23,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "NAME = 'WRITE YOUR NAME HERE'\n",
-    "NETID = 'WRITE YOUR NETID HERE'"
+    "NAME = 'Daniel Moser'\n",
+    "NETID = 'dmoser2'"
    ]
   },
   {
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "deletable": false,
@@ -107,9 +107,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "deletable": false,
     "nbgrader": {
      "checksum": "fffccb9cf89b279d2fc2f7b81c5308a2",
@@ -134,18 +134,36 @@
     "    header (bool): If True, the first line of file is column names.\n",
     "                   Default: True.\n",
     "    '''\n",
+    "    \n",
+    "    # create new empty result list\n",
     "    result = []\n",
     "\n",
-    "    # YOUR CODE HERE\n",
-    "\n",
-    "    return result"
+    "    # open file name as read-only with 'latin-1' encoding\n",
+    "    with open(filename, 'r', encoding = 'latin-1') as f_csv:\n",
+    "        \n",
+    "        # if contains header, then skip first line\n",
+    "        if header == True:\n",
+    "            f_csv.readline()\n",
+    "        \n",
+    "        #loop through rows and split them using comma delimiter\n",
+    "        for row in f_csv:\n",
+    "            column = row.split(',')\n",
+    "            \n",
+    "            value = column[n] # grab value at column[n]\n",
+    "            \n",
+    "            # check if value is not 'NA' and 'NA\\n'. If not, then convert value to int, and append to result list\n",
+    "            if (value != 'NA') and (value != 'NA\\n') :\n",
+    "                value = int(value)\n",
+    "                result.append(value)\n",
+    "            \n",
+    "    return result\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "deletable": false,
     "nbgrader": {
      "checksum": "d0d5080a60210ebd757e1452c4b27dab",
@@ -178,15 +196,15 @@
     "    f.write(csv_with_header)\n",
     "    \n",
     "with open('test.noheader.csv', 'wb') as f:\n",
-    "    f.write(csv_no_header)\n",
-    "\n",
+    "    f.write(csv_no_header)  \n",
+    "    \n",
     "# header cases\n",
     "assert_equal(get_column('test.header.csv', 0, header=True), [2001] * 4)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true,
     "deletable": false,
@@ -206,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true,
     "deletable": false,
@@ -226,9 +244,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "deletable": false,
     "nbgrader": {
      "checksum": "f734269e41f62e49b20feb5507bd1d44",
@@ -246,9 +264,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "deletable": false,
     "nbgrader": {
      "checksum": "2ad847b66bb401fbb175cff6e3968f4c",
@@ -266,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true,
     "deletable": false,
@@ -287,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true,
     "deletable": false,
@@ -307,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true,
     "deletable": false,
@@ -327,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false,
     "deletable": false,
@@ -347,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false,
     "deletable": false,
@@ -368,6 +386,15 @@
     "os.remove('test.header.csv')\n",
     "os.remove('test.noheader.csv')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
