--- a/Week6/assignment/twitter.ipynb
+++ b/Week6/assignment/twitter.ipynb
@@ -20,14 +20,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "NAME = 'WRITE YOUR NAME HERE'\n",
-    "NETID = 'WRITE YOUR NETID HERE'"
+    "NAME = 'Daniel Moser'\n",
+    "NETID = 'dmoser2'"
    ]
   },
   {
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "collapsed": true,
     "deletable": false,
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false,
     "deletable": false,
@@ -95,7 +95,15 @@
      "solution": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['New #job opening at The Ottawa Hospital in #Ottawa - #Clinical #Informatics Specialist #jobs http://t.co/3SlUy11dro', 'Looking for a #Clinical #Informatics Pharmacist Park Plaza Hospital #jobs http://t.co/4Qw8i6YaJI', 'Info Session 10/7: MSc in Biomedical Informatics, University of Chicago https://t.co/65G8dJmhdR #HIT #UChicago #informatics #healthcare', \"Here's THE best #Books I've read on #EHR #HIE #HIPAA and #Health #Informatics http://t.co/meFE0dMSPe\", '@RMayNurseDir @FNightingaleF Scholars talking passionately about what they believe in. #informatics &amp; #skincare  https://t.co/m8qiUSxk0h']\n"
+     ]
+    }
+   ],
    "source": [
     "tweets = '''\n",
     "New #job opening at The Ottawa Hospital in #Ottawa - #Clinical #Informatics Specialist #jobs http://t.co/3SlUy11dro\n",
@@ -128,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "collapsed": true,
     "deletable": false,
@@ -157,7 +165,21 @@
     "    A list of strings. Strings have no whitespace.\n",
     "    Results from splitting each tweet in tweets by whitespace.\n",
     "    '''\n",
-    "    # YOUR CODE HERE"
+    "    \n",
+    "    # compile search pattern\n",
+    "    TweetWords = re.compile(r'''\n",
+    "        [^\\s]+             #any non-character one or more times\n",
+    "        ''',re.VERBOSE)\n",
+    "    \n",
+    "    # make results list\n",
+    "    results = []\n",
+    "    \n",
+    "    # loop through each string in list tweets and search for words\n",
+    "    for i in tweets:\n",
+    "        tweets_list = TweetWords.findall(i)\n",
+    "        results += tweets_list #append words to results list\n",
+    "        \n",
+    "    return results\n"
    ]
   },
   {
@@ -175,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false,
     "deletable": false,
@@ -188,7 +210,15 @@
      "solution": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['New', '#job', 'opening', 'at', 'The', 'Ottawa', 'Hospital', 'in', '#Ottawa', '-', '#Clinical', '#Informatics', 'Specialist', '#jobs', 'http://t.co/3SlUy11dro', 'Looking', 'for', 'a', '#Clinical', '#Informatics', 'Pharmacist', 'Park', 'Plaza', 'Hospital', '#jobs', 'http://t.co/4Qw8i6YaJI', 'Info', 'Session', '10/7:', 'MSc', 'in', 'Biomedical', 'Informatics,', 'University', 'of', 'Chicago', 'https://t.co/65G8dJmhdR', '#HIT', '#UChicago', '#informatics', '#healthcare', \"Here's\", 'THE', 'best', '#Books', \"I've\", 'read', 'on', '#EHR', '#HIE', '#HIPAA', 'and', '#Health', '#Informatics', 'http://t.co/meFE0dMSPe', '@RMayNurseDir', '@FNightingaleF', 'Scholars', 'talking', 'passionately', 'about', 'what', 'they', 'believe', 'in.', '#informatics', '&amp;', '#skincare', 'https://t.co/m8qiUSxk0h']\n"
+     ]
+    }
+   ],
    "source": [
     "words = split_into_words(tweets)\n",
     "print(words)"
@@ -209,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false,
     "deletable": false,
@@ -280,9 +310,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "deletable": false,
     "nbgrader": {
      "checksum": "45f76cd4e5e23db5ccd667585155b6da",
@@ -307,12 +337,33 @@
     "    -------\n",
     "    A list of strings. None of the strings in the return list has a hashtag.\n",
     "    '''\n",
-    "    # YOUR CODE HERE"
+    "    \n",
+    "    # pattern finds only non-white space words\n",
+    "    pattern = re.compile(r'''\n",
+    "    [^\\s]+             #any non-character one or more times\n",
+    "    ''',re.VERBOSE)\n",
+    "    \n",
+    "    # make empty string for any word containing # symbol\n",
+    "    a_list = []\n",
+    "    for word in words:\n",
+    "        a_list += [re.sub('\\#.*', '', word)]\n",
+    "\n",
+    "    words = a_list\n",
+    "\n",
+    "    # make new list where only non-white space words are added\n",
+    "    a_list = []\n",
+    "    for word in words:\n",
+    "        a_list += pattern.findall(word)\n",
+    "        \n",
+    "    words = a_list\n",
+    "    \n",
+    "    return words\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false,
     "deletable": false,
@@ -324,7 +375,15 @@
      "solution": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['New', 'opening', 'at', 'The', 'Ottawa', 'Hospital', 'in', '-', 'Specialist', 'http://t.co/3SlUy11dro', 'Looking', 'for', 'a', 'Pharmacist', 'Park', 'Plaza', 'Hospital', 'http://t.co/4Qw8i6YaJI', 'Info', 'Session', '10/7:', 'MSc', 'in', 'Biomedical', 'Informatics,', 'University', 'of', 'Chicago', 'https://t.co/65G8dJmhdR', \"Here's\", 'THE', 'best', \"I've\", 'read', 'on', 'and', 'http://t.co/meFE0dMSPe', '@RMayNurseDir', '@FNightingaleF', 'Scholars', 'talking', 'passionately', 'about', 'what', 'they', 'believe', 'in.', '&amp;', 'https://t.co/m8qiUSxk0h']\n"
+     ]
+    }
+   ],
    "source": [
     "no_hashtags = remove_hashtags(words)\n",
     "print(no_hashtags)"
@@ -332,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false,
     "deletable": false,
@@ -384,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {
     "collapsed": true,
     "deletable": false,
@@ -411,12 +470,32 @@
     "    -------\n",
     "    A list of strings. None of the strings in the return list has user tags.\n",
     "    '''\n",
-    "    # YOUR CODE HERE"
+    "    \n",
+    "    # pattern finds only non-white space words\n",
+    "    pattern = re.compile(r'''\n",
+    "    [^\\s]+             #any non-character one or more times\n",
+    "    ''',re.VERBOSE)\n",
+    "    \n",
+    "    # make empty string for any word containing @ symbol\n",
+    "    a_list = []\n",
+    "    for word in words:\n",
+    "        a_list += [re.sub('\\@.*', '', word)]\n",
+    "\n",
+    "    words = a_list\n",
+    "\n",
+    "    # make new list where only non-white space words are added\n",
+    "    a_list = []\n",
+    "    for word in words:\n",
+    "        a_list += pattern.findall(word)\n",
+    "        \n",
+    "    words = a_list\n",
+    "    \n",
+    "    return words"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {
     "collapsed": false,
     "deletable": false,
@@ -428,7 +507,15 @@
      "solution": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['New', 'opening', 'at', 'The', 'Ottawa', 'Hospital', 'in', '-', 'Specialist', 'http://t.co/3SlUy11dro', 'Looking', 'for', 'a', 'Pharmacist', 'Park', 'Plaza', 'Hospital', 'http://t.co/4Qw8i6YaJI', 'Info', 'Session', '10/7:', 'MSc', 'in', 'Biomedical', 'Informatics,', 'University', 'of', 'Chicago', 'https://t.co/65G8dJmhdR', \"Here's\", 'THE', 'best', \"I've\", 'read', 'on', 'and', 'http://t.co/meFE0dMSPe', 'Scholars', 'talking', 'passionately', 'about', 'what', 'they', 'believe', 'in.', '&amp;', 'https://t.co/m8qiUSxk0h']\n"
+     ]
+    }
+   ],
    "source": [
     "no_users = remove_users(no_hashtags)\n",
     "print(no_users)"
@@ -436,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {
     "collapsed": false,
     "deletable": false,
@@ -482,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {
     "collapsed": true,
     "deletable": false,
@@ -509,12 +596,32 @@
     "    -------\n",
     "    A list of strings. None of the strings in the return list is an http link.\n",
     "    '''\n",
-    "    # YOUR CODE HERE"
+    "\n",
+    "    # pattern finds only non-white space words\n",
+    "    pattern = re.compile(r'''\n",
+    "    [^\\s]+             #any non-character one or more times\n",
+    "    ''',re.VERBOSE)\n",
+    "    \n",
+    "    # make empty string for any word containing http:// or https:// at beginning of string\n",
+    "    a_list = []\n",
+    "    for word in words:\n",
+    "        a_list += [re.sub('^(?=http[s]?\\:\\/\\/).*', '', word)]\n",
+    "\n",
+    "    words = a_list\n",
+    "\n",
+    "    # make new list where only non-white space words are added\n",
+    "    a_list = []\n",
+    "    for word in words:\n",
+    "        a_list += pattern.findall(word)\n",
+    "        \n",
+    "    words = a_list\n",
+    "    \n",
+    "    return words    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false,
     "deletable": false,
@@ -526,7 +633,15 @@
      "solution": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['New', 'opening', 'at', 'The', 'Ottawa', 'Hospital', 'in', '-', 'Specialist', 'Looking', 'for', 'a', 'Pharmacist', 'Park', 'Plaza', 'Hospital', 'Info', 'Session', '10/7:', 'MSc', 'in', 'Biomedical', 'Informatics,', 'University', 'of', 'Chicago', \"Here's\", 'THE', 'best', \"I've\", 'read', 'on', 'and', 'Scholars', 'talking', 'passionately', 'about', 'what', 'they', 'believe', 'in.', '&amp;']\n"
+     ]
+    }
+   ],
    "source": [
     "no_links = remove_links(no_users)\n",
     "print(no_links)"
@@ -534,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {
     "collapsed": false,
     "deletable": false,
@@ -580,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {
     "collapsed": true,
     "deletable": false,
@@ -607,12 +722,32 @@
     "    -------\n",
     "    A list of strings. None of the strings in the return list has any non-alphabetical characters.\n",
     "    '''\n",
-    "    # YOUR CODE HERE"
+    "    \n",
+    "    # pattern finds only non-white space words\n",
+    "    pattern = re.compile(r'''\n",
+    "    [^\\s]+             #any non-character one or more times\n",
+    "    ''',re.VERBOSE)\n",
+    "    \n",
+    "    # make empty string for any word that has non-alphabetical characters\n",
+    "    a_list = []\n",
+    "    for word in words:\n",
+    "        a_list += [re.sub('[^A-Za-z]*', '', word)]\n",
+    "\n",
+    "    words = a_list\n",
+    "    \n",
+    "    # make new list where only non-white space words are added\n",
+    "    a_list = []\n",
+    "    for word in words:\n",
+    "        a_list += pattern.findall(word)\n",
+    "        \n",
+    "    words = a_list\n",
+    "    \n",
+    "    return words  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {
     "collapsed": false,
     "deletable": false,
@@ -624,7 +759,15 @@
      "solution": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['New', 'opening', 'at', 'The', 'Ottawa', 'Hospital', 'in', 'Specialist', 'Looking', 'for', 'a', 'Pharmacist', 'Park', 'Plaza', 'Hospital', 'Info', 'Session', 'MSc', 'in', 'Biomedical', 'Informatics', 'University', 'of', 'Chicago', 'Heres', 'THE', 'best', 'Ive', 'read', 'on', 'and', 'Scholars', 'talking', 'passionately', 'about', 'what', 'they', 'believe', 'in', 'amp']\n"
+     ]
+    }
+   ],
    "source": [
     "only_letters = keep_letters(no_links)\n",
     "print(only_letters)"
@@ -632,7 +775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {
     "collapsed": false,
     "deletable": false,
@@ -676,9 +819,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "deletable": false,
     "nbgrader": {
      "checksum": "b5310adbdccc6bdf81bbc253af233d00",
@@ -703,12 +846,16 @@
     "    -------\n",
     "    A list of strings. None of the strings in the return list has any capital letters.\n",
     "    '''\n",
-    "    # YOUR CODE HERE"
+    "    \n",
+    "    # iterate through words and make them lower-case\n",
+    "    words = [word.lower() for word in words]\n",
+    "        \n",
+    "    return words"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {
     "collapsed": false,
     "deletable": false,
@@ -720,7 +867,15 @@
      "solution": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['new', 'opening', 'at', 'the', 'ottawa', 'hospital', 'in', 'specialist', 'looking', 'for', 'a', 'pharmacist', 'park', 'plaza', 'hospital', 'info', 'session', 'msc', 'in', 'biomedical', 'informatics', 'university', 'of', 'chicago', 'heres', 'the', 'best', 'ive', 'read', 'on', 'and', 'scholars', 'talking', 'passionately', 'about', 'what', 'they', 'believe', 'in', 'amp']\n"
+     ]
+    }
+   ],
    "source": [
     "all_lower = to_lower(only_letters)\n",
     "print(all_lower)"
@@ -728,7 +883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {
     "collapsed": false,
     "deletable": false,
