--- a/Week3/assignment/get_informatics.ipynb
+++ b/Week3/assignment/get_informatics.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true,
     "nbgrader": {
@@ -34,8 +34,8 @@
    },
    "outputs": [],
    "source": [
-    "NAME = 'WRITE YOUR NAME HERE'\n",
-    "NETID = 'WRITE YOUR NETID HERE'"
+    "NAME = 'Daniel Moser'\n",
+    "NETID = 'dmoser2'"
    ]
   },
   {
@@ -100,9 +100,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "deletable": false,
     "nbgrader": {
      "checksum": "ea2826cfb546805a536d259e3866eb9d",
@@ -129,9 +129,26 @@
     "    output: A string.\n",
     "    '''\n",
     "    \n",
-    "    # YOUR CODE HERE\n",
+    "    # check for integer-only input and if number is between 1 and 100\n",
+    "    if not isinstance(number, int) or number < 1 or number > 100:\n",
+    "        print(\"Input must be integer between 1 and 100. Aborting...\")\n",
+    "        return\n",
     "    \n",
-    "    return result"
+    "    # double check for integer input -- for redundancy\n",
+    "    from nose.tools import assert_equal\n",
+    "    assert_equal(type(number), int)\n",
+    "    \n",
+    "    if ( (number % 3) == 0  and  (number % 5) == 0 ):\n",
+    "        result = 'informatics'\n",
+    "    elif ( number % 3) == 0:\n",
+    "        result = 'info'\n",
+    "    elif (number % 5) == 0:\n",
+    "        result = 'matics'\n",
+    "    else:\n",
+    "        result = str(number)\n",
+    "    \n",
+    "    return result\n",
+    "    "
    ]
   },
   {
@@ -143,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "deletable": false,
@@ -231,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "deletable": false,
@@ -244,9 +261,118 @@
      "solution": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "info\n",
+      "4\n",
+      "matics\n",
+      "info\n",
+      "7\n",
+      "8\n",
+      "info\n",
+      "matics\n",
+      "11\n",
+      "info\n",
+      "13\n",
+      "14\n",
+      "informatics\n",
+      "16\n",
+      "17\n",
+      "info\n",
+      "19\n",
+      "matics\n",
+      "info\n",
+      "22\n",
+      "23\n",
+      "info\n",
+      "matics\n",
+      "26\n",
+      "info\n",
+      "28\n",
+      "29\n",
+      "informatics\n",
+      "31\n",
+      "32\n",
+      "info\n",
+      "34\n",
+      "matics\n",
+      "info\n",
+      "37\n",
+      "38\n",
+      "info\n",
+      "matics\n",
+      "41\n",
+      "info\n",
+      "43\n",
+      "44\n",
+      "informatics\n",
+      "46\n",
+      "47\n",
+      "info\n",
+      "49\n",
+      "matics\n",
+      "info\n",
+      "52\n",
+      "53\n",
+      "info\n",
+      "matics\n",
+      "56\n",
+      "info\n",
+      "58\n",
+      "59\n",
+      "informatics\n",
+      "61\n",
+      "62\n",
+      "info\n",
+      "64\n",
+      "matics\n",
+      "info\n",
+      "67\n",
+      "68\n",
+      "info\n",
+      "matics\n",
+      "71\n",
+      "info\n",
+      "73\n",
+      "74\n",
+      "informatics\n",
+      "76\n",
+      "77\n",
+      "info\n",
+      "79\n",
+      "matics\n",
+      "info\n",
+      "82\n",
+      "83\n",
+      "info\n",
+      "matics\n",
+      "86\n",
+      "info\n",
+      "88\n",
+      "89\n",
+      "informatics\n",
+      "91\n",
+      "92\n",
+      "info\n",
+      "94\n",
+      "matics\n",
+      "info\n",
+      "97\n",
+      "98\n",
+      "info\n",
+      "matics\n"
+     ]
+    }
+   ],
    "source": [
-    "# YOUR CODE HERE"
+    "# use for to loop from 1 to 100\n",
+    "for i in range(1,101):\n",
+    "    print(get_informatics(i))\n"
    ]
   },
   {
