--- a/Week5/assignment/requests.ipynb
+++ b/Week5/assignment/requests.ipynb
@@ -23,14 +23,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "NAME = 'WRITE YOUR NAME HERE'\n",
-    "NETID = 'WRITE YOUR NETID HERE'"
+    "NAME = 'Daniel Moser'\n",
+    "NETID = 'dmoser2'"
    ]
   },
   {
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true,
     "deletable": false,
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true,
     "deletable": false,
@@ -160,7 +160,33 @@
     "    '''\n",
     "    # YOUR CODE HERE\n",
     "    \n",
-    "    return result"
+    "    r = requests.get('http://services.faa.gov/airport/status/{iata}')\n",
+    "    \n",
+    "    result = r.text\n",
+    "    \n",
+    "    return result\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'<!DOCTYPE HTML PUBLIC \"-//W3C//DTD HTML 4.01//EN\" \"http://www.w3.org/TR/html4/strict.dtd\">\\r\\n<html lang=\"en\">\\r\\n<head>\\r\\n\\t<title>Missing File or Error</title>\\r\\n\\t<link href=\"/template/style/main.css\" rel=\"stylesheet\" type=\"text/css\">\\r\\n\\t<link href=\"/template/style/syntaxHighlighter.css\" rel=\"stylesheet\" type=\"text/css\">\\r\\n\\t<!--[if IE 8]>    <link href=\"/template/style/fixes.ie8.css\" rel=\"stylesheet\" type=\"text/css\"><![endif]-->\\r\\n\\t<!--[if LTE IE 7]><link href=\"/template/style/fixes.ie7.css\" rel=\"stylesheet\" type=\"text/css\"><![endif]-->\\r\\n\\t<!--[if LTE IE 6]><link href=\"/template/style/fixes.ie6.css\" rel=\"stylesheet\" type=\"text/css\"><![endif]-->\\r\\n\\t<meta http-equiv=\"content-type\" content=\"text/html; charset=utf-8\">\\r\\n\\t<meta name=\"description\" content=\"FAA Web Services\">\\r\\n\\t<script src=\"http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js\" type=\"text/javascript\"></script>\\r\\n\\t<script src=\"/template/script/jquery.corner.js\" type=\"text/javascript\"></script>\\r\\n\\t<script src=\"/template/script/shCore.js\" type=\"text/javascript\"></script>\\r\\n\\t<script src=\"/template/script/shBrushXml.js\" type=\"text/javascript\"></script>\\r\\n\\t<script src=\"/template/script/shBrushJava.js\" type=\"text/javascript\"></script>\\r\\n\\t<script src=\"/template/script/shBrushCSharp.js\" type=\"text/javascript\"></script>\\r\\n\\t<script src=\"/template/script/doc.js\" type=\"text/javascript\"></script>\\r\\n\\t<script src=\"/template/script/load.js\" type=\"text/javascript\"></script>\\r\\n\\t\\r\\n</head>\\r\\n<body>\\r\\n\\t<div id=\"skipLinks\">\\r\\n\\t\\t<ul>\\r\\n\\t\\t\\t<li><a href=\"#content\">Skip to Page Content</a></li>\\r\\n\\t\\t\\t<li><a href=\"#vNav\">Skip to Sidebar Navigation</a></li>\\r\\n\\t\\t</ul>\\r\\n\\t</div>\\r\\n\\t<div id=\"widthControl\">\\r\\n\\t<div id=\"head\">\\r\\n\\t\\t<div id=\"formSearchDocumentation\">\\r\\n\\t\\t\\t<form action=\"/search/\" method=\"get\" class=\"clear layout no-print\">\\r\\n\\t\\t\\t\\t<div class=\"formRow\">\\r\\n\\t\\t\\t\\t\\t<label for=\"wfq\">Search Documentation</label>\\r\\n\\t\\t\\t\\t\\t<input type=\"text\" class=\"ac_input\" id=\"wfq\" tabindex=\"1\" alt=\"Search Criteria\" name=\"q\" size=\"27\" value=\"Search Documentation\">\\r\\n\\t\\t\\t\\t\\t<input type=\"submit\" class=\"primary button\" value=\"Search\" alt=\"Submit Search\" tabindex=\"2\">\\r\\n\\t\\t\\t\\t</div>\\r\\n\\t\\t\\t</form>\\r\\n\\t\\t\\t\\r\\n\\t\\t\\t\\t<p><strong><a href=\"/signin/\">FAA Developer Sign In</a></strong></p>\\r\\n\\t\\t\\t\\r\\n\\t\\t</div>\\r\\n\\t\\t<a id=\"logoLink\" href=\"/\">FAA Services Home</a>\\r\\n\\t</div>\\r\\n\\t<div id=\"vNav\">\\r\\n\\t\\t<ul class=\"Sle S1\">\\r\\n\\t\\t\\t<li>\\r\\n\\t\\t\\t<ul>\\r\\n\\t\\t\\t\\t<li><a href=\"/\" >FAA Web Services</a></li>\\r\\n\\t\\t\\t\\t<li><a href=\"/docs/basics/\" >API Basics</a></li>\\r\\n\\t\\t\\t\\t<li><a href=\"/docs/tutorial/\" >Simple Tutorial</a></li>\\r\\n\\t\\t\\t\\t<li><a href=\"/docs/formats/\" >Response Formats</a></li>\\r\\n\\t\\t\\t\\t<li><a href=\"/docs/http/\" >HTTP Response Codes and Errors</a></li>\\r\\n\\t\\t\\t\\t<li><a href=\"/docs/faq/\" >Frequently Asked Questions</a></li>\\r\\n\\t\\t\\t\\t<li><a href=\"/docs/services/\" >Services Catalog</a></li>\\r\\n\\r\\n\\t\\t\\t\\t<li><a href=\"/contact/\" >Contact Us</a></li>\\r\\n\\t\\t\\t</ul>\\r\\n\\t\\t\\t</li>\\r\\n\\t\\t</ul>\\r\\n\\t</div>\\r\\n\\t<div id=\"bodyPadding\" class=\"clear\">\\r\\n\\t\\t<img src=\"/template/images/logo_for_print.gif\" alt=\"Federal Aviation Administration\" class=\"forPrint\" width=\"179\" height=\"64\">\\r\\n\\t\\t<div class=\"whiteSheet\">\\r\\n\\t\\t\\t<div id=\"content\" class=\"content\">\\r\\n\\t\\t\\t\\t<h1 class=\"pageTitle\">Missing File or Error</h1>\\r\\n\\t\\t\\t\\t\\r\\n\\t<p>Whoops! Either the page you requested could not be found or there was some other kind of error.</p>\\r\\n\\t<p>If you were trying to consume a web service, please double check the URI you\\'re using or consult the <a href=\"/docs/services/\">service catalog</a>.</p>\\t\\r\\n\\t<p>If you believe something\\'s wrong on our end, please <a href=\"/contact/?reason=Bug%20Report\">let us know</a>.</p>\\r\\n\\r\\n\\t\\t\\t</div>\\r\\n\\t\\t</div>\\r\\n\\t</div>\\r\\n    <div id=\"footer\">\\r\\n\\t\\t<div class=\"address\">\\r\\n\\t\\t\\t<p><a href=\"http://www.dot.gov/\" title=\"Department of Transportation\">U.S.&nbsp;Department&nbsp;of&nbsp;Transportation</a><br>\\r\\n\\t\\t\\tFederal&nbsp;Aviation&nbsp;Administration<br>\\r\\n\\t\\t\\t800&nbsp;Independence&nbsp;Avenue,&nbsp;SW<br>\\r\\n\\t\\t\\tWashington,&nbsp;DC&nbsp;20591<br>\\r\\n\\t\\t\\t1-866-TELL-FAA&nbsp;(1-866-835-5322)</p>\\r\\n        </div>\\r\\n    \\t<div class=\"midSection divide\">\\r\\n\\t\\t\\t<p class=\"title\">Websites</p>\\r\\n\\t\\t\\t<ul>\\r\\n\\t\\t\\t\\t<li><a href=\"http://www.faa.gov/\">FAA.gov</a></li>\\r\\n\\t\\t\\t</ul>\\r\\n\\t\\t\\t<p class=\"title\">Web Policies</p>\\r\\n\\t\\t\\t<ul>\\r\\n\\t\\t\\t\\t<li><a href=\"http://faa.gov/web_policies/\">Web Policies &amp; Notices</a></li>\\r\\n\\t\\t\\t\\t<li><a href=\"http://faa.gov/privacy/\">Privacy Policy</a></li>\\r\\n\\t\\t\\t</ul>\\r\\n\\t\\t</div>\\r\\n\\t\\t<div class=\"midSection divide\">\\r\\n\\t\\t\\t<p class=\"title\">Technical Resources</p>\\r\\n\\t\\t\\t<ul id=\"technical-links\">\\r\\n\\t\\t\\t\\t\\r\\n\\t\\t\\t\\t\\t<li><a href=\"/exit/?pageName=REST&amp;pageLink=http://en.wikipedia.org/wiki/Representational_State_Transfer\" class=\"exiter\">REST</a></li>\\r\\n\\t\\t\\t\\t\\t<li><a href=\"/exit/?pageName=HTTP&amp;pageLink=http://www.w3.org/Protocols/rfc2616/rfc2616.html\" class=\"exiter\">HTTP</a></li>\\r\\n\\t\\t\\t\\t\\t<li><a href=\"/exit/?pageName=XML&amp;pageLink=http://en.wikipedia.org/wiki/XML\" class=\"exiter\">XML</a></li>\\r\\n\\t\\t\\t\\t\\t<li><a href=\"/exit/?pageName=JSON&amp;pageLink=http://json.org/\" class=\"exiter\">JSON</a></li>\\r\\n\\t\\t\\t\\t\\r\\n\\t\\t\\t</ul>\\r\\n\\t\\t</div>\\r\\n\\t\\t<div class=\"right divide\">\\r\\n\\t\\t<p class=\"title\">Contact Links</p>\\r\\n\\t\\t\\t<ul>\\r\\n\\t\\t\\t\\t<li><a href=\"/contact/\">Contact Us</a></li>\\r\\n\\t\\t\\t</ul>\\r\\n\\t\\t</div>\\r\\n    </div>\\r\\n    <p class=\"forPrint\">This page can be viewed online at: http://services.faa.gov/execute/</p>\\r\\n</div>\\r\\n\\r\\n</body>\\r\\n</html> '"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_airport('ORD')"
    ]
   },
   {
@@ -181,9 +207,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "deletable": false,
     "nbgrader": {
      "checksum": "481a918de300e50aa731067a03aff66e",
@@ -193,7 +219,26 @@
      "solution": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "Expecting value: line 1 column 1 (char 0)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mStopIteration\u001b[0m                             Traceback (most recent call last)",
+      "\u001b[1;32m/usr/lib/python3.4/json/decoder.py\u001b[0m in \u001b[0;36mraw_decode\u001b[1;34m(self, s, idx)\u001b[0m\n\u001b[0;32m    358\u001b[0m         \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 359\u001b[1;33m             \u001b[0mobj\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mend\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mscan_once\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ms\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0midx\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    360\u001b[0m         \u001b[1;32mexcept\u001b[0m \u001b[0mStopIteration\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0merr\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mStopIteration\u001b[0m: 0",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-7-81c3100db45b>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mjson\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mord_json\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mjson\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mloads\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mget_airport\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"ORD\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m \u001b[0msfo_json\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mjson\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mloads\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mget_airport\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"SFO\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m/usr/lib/python3.4/json/__init__.py\u001b[0m in \u001b[0;36mloads\u001b[1;34m(s, encoding, cls, object_hook, parse_float, parse_int, parse_constant, object_pairs_hook, **kw)\u001b[0m\n\u001b[0;32m    316\u001b[0m             \u001b[0mparse_int\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mNone\u001b[0m \u001b[1;32mand\u001b[0m \u001b[0mparse_float\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mNone\u001b[0m \u001b[1;32mand\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    317\u001b[0m             parse_constant is None and object_pairs_hook is None and not kw):\n\u001b[1;32m--> 318\u001b[1;33m         \u001b[1;32mreturn\u001b[0m \u001b[0m_default_decoder\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdecode\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ms\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    319\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mcls\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    320\u001b[0m         \u001b[0mcls\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mJSONDecoder\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m/usr/lib/python3.4/json/decoder.py\u001b[0m in \u001b[0;36mdecode\u001b[1;34m(self, s, _w)\u001b[0m\n\u001b[0;32m    341\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    342\u001b[0m         \"\"\"\n\u001b[1;32m--> 343\u001b[1;33m         \u001b[0mobj\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mend\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mraw_decode\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ms\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0midx\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0m_w\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ms\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    344\u001b[0m         \u001b[0mend\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0m_w\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ms\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mend\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    345\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mend\u001b[0m \u001b[1;33m!=\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ms\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m/usr/lib/python3.4/json/decoder.py\u001b[0m in \u001b[0;36mraw_decode\u001b[1;34m(self, s, idx)\u001b[0m\n\u001b[0;32m    359\u001b[0m             \u001b[0mobj\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mend\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mscan_once\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ms\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0midx\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    360\u001b[0m         \u001b[1;32mexcept\u001b[0m \u001b[0mStopIteration\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0merr\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 361\u001b[1;33m             \u001b[1;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0merrmsg\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Expecting value\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0ms\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0merr\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvalue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    362\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[0mobj\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mend\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: Expecting value: line 1 column 1 (char 0)"
+     ]
+    }
+   ],
    "source": [
     "import json\n",
     "\n",
@@ -219,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "deletable": false,
@@ -232,7 +277,19 @@
      "solution": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'ord_json' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-8-439a82557912>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0massert_equal\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0misinstance\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mord_json\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdict\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0massert_equal\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mord_json\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"IATA\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"ORD\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0massert_equal\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mord_json\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"city\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"Chicago\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0massert_equal\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mord_json\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"state\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"Illinois\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0massert_equal\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mord_json\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"name\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"Chicago OHare International\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'ord_json' is not defined"
+     ]
+    }
+   ],
    "source": [
     "assert_equal(isinstance(ord_json, dict), True)\n",
     "assert_equal(ord_json[\"IATA\"], \"ORD\")\n",
