--- a/Week6/assignment/flights.ipynb
+++ b/Week6/assignment/flights.ipynb
@@ -14,14 +14,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "NAME = 'WRITE YOUR NAME HERE'\n",
-    "NETID = 'WRITE YOUR NETID HERE'"
+    "NAME = 'Daniel Moser'\n",
+    "NETID = 'dmoser2'"
    ]
   },
   {
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true,
     "deletable": false,
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "deletable": false,
@@ -119,7 +119,17 @@
     "    -------\n",
     "    bool\n",
     "    '''\n",
-    "    # YOUR CODE HERE"
+    "    \n",
+    "    # ([A-Z]|[0-9]) -- check for uppercase alphabetical letter or number\n",
+    "    # {3,3} -- check for occurence exactly 3 times\n",
+    "    IATAVerify = re.compile('^([A-Z]|[0-9]){3,3}$')\n",
+    "    \n",
+    "    # True if string matches pattern\n",
+    "    if IATAVerify.match(iata):\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False\n",
+    "    "
    ]
   },
   {
@@ -131,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "deletable": false,
@@ -182,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true,
     "deletable": false,
@@ -204,18 +214,34 @@
     "    \n",
     "    Parameters\n",
     "    ----------\n",
-    "    coordiante: string\n",
+    "    coordinate: string\n",
     "    \n",
     "    Returns\n",
     "    -------\n",
     "    bool\n",
     "    '''\n",
-    "    # YOUR CODE HERE"
+    "    \n",
+    "    # compile verbose pattern\n",
+    "    LatLongVerify = re.compile(r'''\n",
+    "        ^      # string begins at beginning of line\n",
+    "        -?     # optional negative sign\n",
+    "        \\d*    # prefix digits (show up zero or more times)\n",
+    "        [.]    # mandatory decimal\n",
+    "        \\d+    # at least suffix digit\n",
+    "        $      # string terminates at end of the line\n",
+    "        ''',re.VERBOSE)         \n",
+    "    \n",
+    "    # True if string matches pattern\n",
+    "    if LatLongVerify.match(coordinate):\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False    \n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "deletable": false,
@@ -268,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true,
     "deletable": false,
@@ -288,12 +314,27 @@
     "    Returns True if the string is a valid tail number.\n",
     "    Returns False if the string is not a valid tail number.\n",
     "    '''\n",
-    "    # YOUR CODE HERE"
+    "    \n",
+    "    # compile verbose pattern\n",
+    "    TailNumberVerify = re.compile(r'''\n",
+    "        ^                 # string begins at beginning of line\n",
+    "        N                 # mandatory N\n",
+    "        [1-9]             # mandatory non-zero digit\n",
+    "        ([^A-Za-zIO]?){2} # optional 2nd and third character must not be alphabetical\n",
+    "        ([^a-zIO]?){2}$   # optional last two characters must not be lower case or I or O\n",
+    "        ''',re.VERBOSE)\n",
+    "    \n",
+    "    # True if string matches pattern\n",
+    "    if TailNumberVerify.match(n_number):\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False      \n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "deletable": false,
@@ -363,6 +404,15 @@
     "assert_equal(validate_tail_number('N100000'), False) # N-number may only consist of one to five characters\n",
     "assert_equal(validate_tail_number('N10000A'), False) # N-number may only consist of one to five characters"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
